# pyslither

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
example/: main.py
examples/: README.md
examples/foodnet/: agent.py  test_model.py  train.py
examples/single_player/: main.py
native/: bindings.cpp  env.c  env.h
native/util/: tdarray.c  tdarray.h
pyslither/: __init__.py  __init__.pyi  _core.pyi
