[build-system]
requires = [
    "setuptools",
    "wheel",
    "pybind11"
]

build-backend = "setuptools.build_meta"

[project]
name = "pyslither"
version = "0.1.0"
dependencies = ["numpy"]

[project.optional-dependencies]
examples = ["raylib"]

[tool.setuptools.packages.find]
include = ["pyslither*"]

[tool.setuptools.package-data]
pyslither = ["*.pyi", "py.typed"]